generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model User {
  id       Int     @id @default(autoincrement())
  name     String
  email    String  @unique
  password String
  avatar   String?
  profileBackground String?
  dateOfBirth DateTime?
  job String?
  location String?
  status String?
  aboutUser String?
  gender String?
}

model List {
id Int @id @default(autoincrement())
title 
}
